--- a/www/sites/djs/3lau.html
+++ b/www/sites/djs/3lau.html
@@ -70,7 +70,7 @@
                                                                onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage 20:00 - 21:00</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Justin Blau, alias 3LAU ist ein amerikanischer Progressive House und Electro House
