--- a/www/sites/djs/adam_beyer.html
+++ b/www/sites/djs/adam_beyer.html
@@ -57,7 +57,7 @@
                                                         onmouseover="this.src='../../img/social/soundcloud_hover.gif'"
                                                         onmouseout="this.src='../../img/social/soundcloud.gif'"/></a>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus 02:30 - 04:00</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container" style="margin-top: 285px;">
     Adam Beyer ist ein Techno-DJ und -Produzent aus Schweden.
