--- a/www/sites/djs/alesso.html
+++ b/www/sites/djs/alesso.html
@@ -65,7 +65,7 @@
                                                                          onmouseout="this.src='../../img/social/youtubeS.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage 23:00 - 00:30</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Alesso ist ein schwedischer DJ, Produzent und Remixer im Bereich House und Progressive.
