--- a/www/sites/djs/atmozfears.html
+++ b/www/sites/djs/atmozfears.html
@@ -66,7 +66,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance 15:00 - 16:00</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Tim van de Stadt, alias Atmozfears ist ein niederländischer Hardstyle-DJ. Seine
