--- a/www/sites/djs/carnage.html
+++ b/www/sites/djs/carnage.html
@@ -59,7 +59,7 @@
 
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage 18:00 - 19:00</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Carnage hat sich dem Genre EDM und Trap verschrieben.
