--- a/www/sites/djs/watermat.html
+++ b/www/sites/djs/watermat.html
@@ -63,7 +63,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Laurent Arriau alias Watermät, ist ein französischer DJ und Produzent.
