--- a/www/sites/stages/clubcircus.html
+++ b/www/sites/stages/clubcircus.html
@@ -32,6 +32,163 @@
         letzte Festival Tag, der Samstag, unter dem Hosting von Electronic Motion
         mit Techno bespielt wird. Am Line Up stehen da zum Beispiel Adam Beyer, Len Faki, Mark Knight uvm.
     </div>
+    <ul class="nav nav-pills" style="margin-bottom: 5px;">
+        <li class="active col-xs-6 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
+        <li class="col-xs-6 pill"><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
+
+    </ul>
+
+    <div class="tab-content" id="container">
+        <div id="friday" class="tab-pane fade in active">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Kyma</div>
+                <hr class="a_hr">
+                <div class="a_info">12:00 - 13:30</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Dominik Bagari</div>
+                <hr class="a_hr">
+                <div class="a_info">13:30 - 15:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Jean Philippe</div>
+                <hr class="a_hr">
+                <div class="a_info">15:00 - 17:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/lost_frequencies.jpg" class="a_img"></div>
+                <div class="a_name">Lost Frequencies</div>
+                <hr class="a_hr">
+                <div class="a_info">17:00 - 18:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Denggalengg</div>
+                <hr class="a_hr">
+                <div class="a_info">18:00 - 19:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/flic_flac.jpg" class="a_img"></div>
+                <div class="a_name">Flic Flac</div>
+                <hr class="a_hr">
+                <div class="a_info">19:00 - 20:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/thomas_jack.jpg" class="a_img"></div>
+                <div class="a_name">Thomas Jack</div>
+                <hr class="a_hr">
+                <div class="a_info">20:00 - 21:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/watermat.jpg" class="a_img"></div>
+                <div class="a_name">Watermät</div>
+                <hr class="a_hr">
+                <div class="a_info">21:00 - 22:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Scheinizzl</div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 23:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Max Manie</div>
+                <hr class="a_hr">
+                <div class="a_info">23:00 - 00:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+
+
+        </div>
+        <div id="saturday" class="tab-pane fade">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Chroph</div>
+                <hr class="a_hr">
+                <div class="a_info">12:00 - 13:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Konstant</div>
+                <hr class="a_hr">
+                <div class="a_info">13:00 - 14:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Royal Ruv</div>
+                <hr class="a_hr">
+                <div class="a_info">14:00 - 15:30</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">TRBS Bund</div>
+                <hr class="a_hr">
+                <div class="a_info">15:30 - 17:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/spada.jpg" class="a_img"></div>
+                <div class="a_name">Spada</div>
+                <hr class="a_hr">
+                <div class="a_info">17:00 - 18:30</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/peer_kusiv.jpg" class="a_img"></div>
+                <div class="a_name">Peer Kusiv</div>
+                <hr class="a_hr">
+                <div class="a_info">18:30 - 19:30</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/nico_pusch.jpg" class="a_img"></div>
+                <div class="a_name">Nico Pusch & Tom Pusch</div>
+                <hr class="a_hr">
+                <div class="a_info">19:30 - 21:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/faul__wad_ad.jpg" class="a_img"></div>
+                <div class="a_name">Faul & Wad Ad</div>
+                <hr class="a_hr">
+                <div class="a_info">21:00 - 22:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/felix_jaehn.jpg" class="a_img"></div>
+                <div class="a_name">Felix Jahn</div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 23:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/robin_schulz.jpg" class="a_img"></div>
+                <div class="a_name">Robin Schulz</div>
+                <hr class="a_hr">
+                <div class="a_info">23:00 - 00:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+        </div>
+
+
+    </div>
+
 </div>
 </body>
 
