--- a/www/sites/stages/qdance.html
+++ b/www/sites/stages/qdance.html
@@ -37,6 +37,181 @@
             Saturday July 11th 12:00 - 03:00 (Music until 02:00)
         </p>
     </div>
+
+    <ul class="nav nav-pills" style="margin-bottom: 5px;">
+        <li class="active col-xs-6 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
+        <li class="col-xs-6 pill"><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
+
+    </ul>
+
+    <div class="tab-content" id="container">
+        <div id="friday" class="tab-pane fade in active">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Raveision</div>
+                <hr class="a_hr">
+                <div class="a_info">12:00 - 13:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/geck-o.jpg" class="a_img"></div>
+                <div class="a_name">Geck-O</div>
+                <hr class="a_hr">
+                <div class="a_info">13:00 - 14:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/audiofreq.jpg" class="a_img"></div>
+                <div class="a_name">Audiofreq</div>
+                <hr class="a_hr">
+                <div class="a_info">14:00 - 15:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/atmosfears.jpg" class="a_img"></div>
+                <div class="a_name">Atmozfears</div>
+                <hr class="a_hr">
+                <div class="a_info">15:00 - 16:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/bass_modulators.jpg" class="a_img"></div>
+                <div class="a_name">Bass Modulators</div>
+                <hr class="a_hr">
+                <div class="a_info">16:00 - 17:30</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/code_black.jpg" class="a_img"></div>
+                <div class="a_name">Code Black</div>
+                <hr class="a_hr">
+                <div class="a_info">17:30 - 19:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/coone.jpg" class="a_img"></div>
+                <div class="a_name">Coone</div>
+                <hr class="a_hr">
+                <div class="a_info">19:00 - 20:30</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/brennan_heart.jpg" class="a_img"></div>
+                <div class="a_name">Brennan Heart</div>
+                <hr class="a_hr">
+                <div class="a_info">20:30 - 22:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/gunz_for_hire.jpg" class="a_img"></div>
+                <div class="a_name">Gunz for Hire</div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 22:30</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/zatox.jpg" class="a_img"></div>
+                <div class="a_name">Zatox</div>
+                <hr class="a_hr">
+                <div class="a_info">22:30 - 00:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/b-front.jpg" class="a_img"></div>
+                <div class="a_name">B-Front</div>
+                <hr class="a_hr">
+                <div class="a_info">00:00 - 01:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/korsakoff.jpg" class="a_img"></div>
+                <div class="a_name">Korsakoff</div>
+                <hr class="a_hr">
+                <div class="a_info">01:00 - 02:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+        </div>
+        <div id="saturday" class="tab-pane fade">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Existenze</div>
+                <hr class="a_hr">
+                <div class="a_info">12:00 - 13:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Scale</div>
+                <hr class="a_hr">
+                <div class="a_info">13:00 - 14:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/cyber.png" class="a_img"></div>
+                <div class="a_name">Cyber</div>
+                <hr class="a_hr">
+                <div class="a_info">14:00 - 15:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/toneshifterz.jpg" class="a_img"></div>
+                <div class="a_name">Toneshifterz</div>
+                <hr class="a_hr">
+                <div class="a_info">15:00 - 16:30</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/wasted_penguinz.jpg" class="a_img"></div>
+                <div class="a_name">Wasted Penguinz</div>
+                <hr class="a_hr">
+                <div class="a_info">16:30 - 18:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/psycho_punkz.jpg" class="a_img"></div>
+                <div class="a_name">Psyko Punkz</div>
+                <hr class="a_hr">
+                <div class="a_info">18:00 - 19:30</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/wildstylez.jpg" class="a_img"></div>
+                <div class="a_name">Wildstylez</div>
+                <hr class="a_hr">
+                <div class="a_info">19:30 - 21:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noisecontrollers.jpg" class="a_img"></div>
+                <div class="a_name">Noisecontrollers</div>
+                <hr class="a_hr">
+                <div class="a_info">21:00 - 22:30</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/ran_d.jpg" class="a_img"></div>
+                <div class="a_name">Ran-D</div>
+                <hr class="a_hr">
+                <div class="a_info">22:30 - 00:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/endymion.jpg" class="a_img"></div>
+                <div class="a_name">Endymion</div>
+                <hr class="a_hr">
+                <div class="a_info">00:00 - 01:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/mad_dog_anime.jpg" class="a_img"></div>
+                <div class="a_name">Mad Dog vs. AniMe</div>
+                <hr class="a_hr">
+                <div class="a_info">01:00 - 02:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+
+        </div>
+    </div>
 </div>
 </body>
 
