--- a/www/sites/timetable.html
+++ b/www/sites/timetable.html
@@ -18,7 +18,7 @@
         <a href="../index.html" style="color: white; text-decoration: none;">
             <div class="header_div" style="color: white">
                 <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Stages
+                Timetable
                 <div style="float: right;">
                     <a href="#myModal" class="btn options" data-toggle="modal" style="float: right"><img src="../img/max/options.png" style="height: 30px; margin: 5px 5px 0 0"
                                                                                               onmouseover="this.src='../img/max/options2.png'"
