--- a/www/sites/djs/armin.html
+++ b/www/sites/djs/armin.html
@@ -65,7 +65,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage 22:00 - 23:30</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Armin van Buuren ist ein niederländischer Trance-DJ und -Produzent. Mittlerweile war
