--- a/www/sites/djs/b_front.html
+++ b/www/sites/djs/b_front.html
@@ -70,7 +70,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance 00:00 - 01:00</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Bob van der Palen, alias B-Front, entdeckte früh seine Liebe zur Musik und
