--- a/www/sites/djs/code.html
+++ b/www/sites/djs/code.html
@@ -66,7 +66,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Corey Soljan alias Code Black wurde in Sydney, Australien geboren und erkannte
