--- a/www/sites/djs/dimitri_wyman.html
+++ b/www/sites/djs/dimitri_wyman.html
@@ -63,7 +63,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Das progressive House Duo Dimitri Vangelis und Wyman kommt aus Stockholm,
