--- a/www/sites/djs/don_diablo.html
+++ b/www/sites/djs/don_diablo.html
@@ -70,7 +70,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Don Diablo ist ein holländischer EDM-DJ und Produzent. Er startete seine
