--- a/www/sites/djs/endymion.html
+++ b/www/sites/djs/endymion.html
@@ -66,7 +66,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Endymion ist ein niederländischer Hardcore-Techno-Act, der im Jahr 1997 gegründet
