--- a/www/sites/djs/eva_shaw.html
+++ b/www/sites/djs/eva_shaw.html
@@ -62,7 +62,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Die hübsche Kanadierin Eva Shaw machte sich schnell einen Namen in der EDMSzene, als sie ihre Karriere in NYC begann. Sie spielte als Resident DJane im
