--- a/www/sites/djs/faulwad_ad.html
+++ b/www/sites/djs/faulwad_ad.html
@@ -57,7 +57,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Faul & Wad Ad ist ein französisches DJ-Duo aus Paris. Bekannt wurden sie durch das
