--- a/www/sites/djs/jaguar.html
+++ b/www/sites/djs/jaguar.html
@@ -62,7 +62,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Jaguar Skills ist ein britischer DJ, der bekannt ist für sein vielseitiges Multi-Genre.
