--- a/www/sites/djs/korsakoff.html
+++ b/www/sites/djs/korsakoff.html
@@ -61,7 +61,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Das Projekt Korsakoff wurde 2001 von Bart Cook, alias Catscan eingeleitet, um
