--- a/www/sites/djs/lostfreq.html
+++ b/www/sites/djs/lostfreq.html
@@ -58,7 +58,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Felix De Laef alias Lost Frequencies ist ein belgischer DJ und Produzent. 2014
