--- a/www/sites/djs/maddog.html
+++ b/www/sites/djs/maddog.html
@@ -63,7 +63,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Filippo Calcagni alias Mad Dog ist Produzent und DJ der Hardcore Szene. Er startete
