--- a/www/sites/djs/nicopusch.html
+++ b/www/sites/djs/nicopusch.html
@@ -64,7 +64,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Nico Pusch wurde 1986 in Deutschland geboren. Er begann bereits mit 14 Jahren
