--- a/www/sites/djs/noisecontrollers.html
+++ b/www/sites/djs/noisecontrollers.html
@@ -61,7 +61,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Q-Dance</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Noisecontrollers wurde 2005 von den niederländischen Musikproduzenten DJ Bas
