--- a/www/sites/djs/oliver.html
+++ b/www/sites/djs/oliver.html
@@ -66,7 +66,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Oliver Heldens ist ein niederländischer DJ und Produzent des Deep House und Future
