--- a/www/sites/djs/pegboard.html
+++ b/www/sites/djs/pegboard.html
@@ -65,7 +65,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Pegboard Nerds sind ein dänisch-norwegisches Duo, bestehend aus Alexander Odden
