--- a/www/sites/djs/pendulum.html
+++ b/www/sites/djs/pendulum.html
@@ -57,7 +57,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Pendulum starteten ihre Karriere 2002 als 5 köpfige australisch-britische DnB-Band,
