--- a/www/sites/djs/spada.html
+++ b/www/sites/djs/spada.html
@@ -62,7 +62,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Spada ist ein italienischer Electro-Musik Produzent, Songwriter und DJ. Seine Werke
