--- a/www/sites/djs/timo.html
+++ b/www/sites/djs/timo.html
@@ -66,7 +66,7 @@
         </span>
 
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Club Circus</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Timo Maas ist ein deutscher Techno- und House-DJ. Bereits 1983 sammelte Maas
