--- a/www/sites/djs/vinai.html
+++ b/www/sites/djs/vinai.html
@@ -67,7 +67,7 @@
                                                     onmouseout="this.src='../../img/social/twitter.gif'"/></a>
         </span>
 </div>
-<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage: 22:00-23:00!</div>
+<div class="col-xs-12 artist_stage" style="position: fixed; top: 240px;">Mainstage</div>
 
 <div class="container-fluid" style="margin-top: 285px; margin-bottom: 10px">
     Andrea und Alessandro Vinai sind ein elektronisches Musik-Duo und sie begannen
